--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="header">
       <a class="logo logo--catalog" href="/"><img src="img/logo.svg" width="164" height="36" alt="DEVICE"></a>
       <nav class="menu">
         <form class="menu__search" method="get" action="https://echo.htmlacademy.ru">
@@ -38,7 +38,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="main__catalog">
       <h1 class="catalog__title">Моноподы для селфи</h1>
       <ul class="bredcrumbs">
         <li><a href="#">Главная</a></li>
@@ -155,8 +155,8 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <div class="footer">
+    <footer class="footer">
+      <div class="footer__wrapper">
         <a class="logo logo--main logo--footer" href="/"><img src="img/logo-footer.svg" width="164" height="36" alt="DEVICE"></a>
         <ul class="footer__user">
           <li><a class="footer__user--profile" href="#">Валентин Петухов</a></li>
